              canonicalPlantri(), which still requires connectedness.
            - Routines plantri() and canonicalPlantri() now throw an exception
              if the graph is empty.
            - New routines extendedPlantri() and fromExtendedPlantri(), which
              are better-suited than the plantri format for non-planar graphs.
            - The flype-related routines no longer require the graph to be
              connected.
        Class ModelLinkGraphCells:
            - Now supports non-planar graphs (as used with virtual links), as
              well as disconnected and/or empty graphs.  In particular:
                + The routine countCells() will now return the number of cells
                  even when the graph is non-planar (as opposed to the previous
                  behaviour of returning zero).
                + Added new routines countComponents() and genus().
                + Removed isValid() completely, since those cases where
                  isValid() returned false in older versions of Regina are now
                  fully supported.
            - New routines countEdges(), countArcs() and countNodes().
        Class ModelLinkGraphNode:
            - New routines loops(), bigons() and triangles().
        Enum NamedPermGroup:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PERM_GROUP_TRIVIAL) have been
              renamed as scoped enum values (e.g., NamedPermGroup::Trivial).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class NativeInteger<bytes>:
            - New routine str().
            - Added a spaceship operator (<=>) for comparisons.
        Enum NiceType:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., NICE_INTRODUCE) have been
              renamed as scoped enum values (e.g., NiceType::INTRODUCE).